--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -42,9 +42,9 @@ html {min-height: 100%;position: relative;}
 body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_sansregular',Helvetica,Arial,Sans-serif;background-color: #cae5ff;}
 .air-bg {background-repeat:no-repeat;background-position:center center;background-size: cover;-webkit-background-size: cover;-moz-background-size: cover;background-attachment: fixed;}
 
-.container {width: 1170px !important;}
+.container {width: 1170px !important;max-width: 1170px !important}
 .right-body {padding-top: 20px;}
-.page-overlay {background: #000;position: fixed;left: 0;top: 0;width: 100%;height: 100%;z-index: 1100;display: none;opacity: 0.5;-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";transition:all 1s ease-in-out;-webkit-transition:all 1s ease-in-out;-moz-transition:all 1s ease-in-out;}
+.page-overlay {background: #000;position: fixed;left: 0;top: 0;width: 100%;height: 100%;z-index: 1100;opacity: 0.5;filter(alpha=50);-ms-filter(alpha=50);display: none;}
 .btn-ghost {border:1px solid;background: transparent;}
 .btn-ghost:hover {background: #fff;background: rgba(255,255,255,0.7);}
 .ghost-white {color: #fff;}
@@ -122,12 +122,12 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .frmto-menu {background:transparent;color: #fff;padding: 0 !important;min-width: 220px;}
 .frmto-menu>.loc-item {display: block;width: 100%;background: #fff !important;height: 36px;border-bottom: 1px solid #ddd}
 .frmto-menu>.loc-item>.loc-item-in:hover {background: #d8f2fe}
-.frmto-menu>.loc-item a:hover,.frmto-menu>.loc-item a:focus,.frmto-menu>.loc-item a:active {background: transparent;color: #000}
+.frmto-menu>.loc-item a:hover,.frmto-menu>.loc-item a:focus,.frmto-menu>.loc-item a:active {background: transparent;color: #141414}
 
 .loc-item>.loc-item-in {display: block;width: 100%;position: relative;padding: 0;height: inherit;}
 .loc-item-in>.loc-item-link {left: 0;top: 0;position: absolute;padding: 0;width: 195px;height: inherit;padding: 5px;}
-.loc-item-link .loc-pos {width: 50%;float: left;color: #000;line-height: 24px;padding: 0 5px;overflow: hidden;white-space: nowrap;text-overflow:ellipsis;}
-.loc-item-in a:hover {background: #fff;color: #000}
+.loc-item-link .loc-pos {width: 50%;float: left;color: #141414;line-height: 24px;padding: 0 5px;overflow: hidden;white-space: nowrap;text-overflow:ellipsis;}
+.loc-item-in a:hover {background: #fff;color: #141414}
 .loc-item-in>.btn-del {right: 5px;top: 7px;position: absolute;border-radius: 50%;width: 20px;height: 20px;padding: 0;}
 .loc-item-in>.btn-del:hover {background: #ed5565;}
 
@@ -142,7 +142,7 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 
 .rlist-wrapper {margin-bottom: 30px;}
 .rlist-headings {width: 100%;padding: 10px;margin: 0 0 15px;overflow: hidden;background: #CCD1D9;list-style-type: none;border-bottom:1px solid #c6c6c6;}
-.rlist-headings>li {width: auto;display: inline-block;float: left;color: #000;padding: 0 5px;text-align: center;}
+.rlist-headings>li {width: auto;display: inline-block;float: left;color: #141414;padding: 0 5px;text-align: center;}
 .rlist-headings>li+li {border-left: 1px solid #AAB2BD;}
 .result-item {width: 100%;margin: 0;padding:6px 10px;display: table;overflow: hidden;background: #fff;margin: 5px 0;box-shadow:0 1px 2px rgba(0,0,0,.2);-webkit-box-shadow:0 1px 2px rgba(0,0,0,.2);-moz-box-shadow:0 1px 2px rgba(0,0,0,.2);}
 .result-item:hover {background: #efefef;}
@@ -159,7 +159,7 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .rlist-headings>li:nth-child(6),.result-item>.rb-aip {width:14%}
 .rlist-headings>li:nth-child(7),.result-item>.rb-buk {width:14%}
 
-.r-collapsed-info {background: #fff;border-radius: 3px;overflow: hidden;border:1px solid #eee;}
+.r-collapsed-info {background: #f7f7f7;border-radius: 3px;overflow: hidden;border:1px solid #eee;}
 .r-collapsed-inner {padding:15px 15px 20px;display: inline-block;width: 100%;}
 
 .brand-info {border-bottom: 1px solid #d7d7d7;margin-bottom: 15px;}
@@ -175,7 +175,7 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .listed-revws {display: block;margin: 0;padding: 0;width: 100%;height: 284px;overflow-y:auto }
 .listed-revws .each-rvw {display: block;width: 100%;margin: 0;padding:5px;}
 .each-rvw:nth-child(odd) {background: #eee}
-.each-rvw .rv-pts {color: #000;}
+.each-rvw .rv-pts {color: #141414;}
 .each-rvw .rv-pts:after {content: ' : ';}
 .each-rvw .rv-text {font-family: 'open_sanslight';}
 .each-rvw .rv-date {font-family: 'open_sanslight';color: #ccc;font-size: 12px;}
@@ -207,6 +207,45 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 .ss-dd-list>.dd-li+.dd-li {border-top: 1px solid #ddd;}
 .dd-li>label {display: inline-block;position: absolute;top: 0;right: 0;left: 0;bottom: 0;cursor: pointer;}
 .dd-li>input[type="checkbox"] {display: inline-block;position: absolute;right: 0;}
+
+
+ 
+/**************/
+
+.page-tabs {background: transparent;border-bottom: 1px solid #4fc1e9}
+.page-tabs>li>a {background:#c6edfb !important;color: #fff !important}
+.page-tabs>li.active>a,.page-tabs>li.active>a:active,.page-tabs>li.active>a:focus,.page-tabs>li.active>a:hover {background: #4fc1e9 !important;color: #fff !important}
+.page-tabs>li>a {border-radius:0 !important;padding-left: 50px;padding-right: 50px;color: #ccc}
+
+.coll-b-header {font-family: 'open_sansregular';background: #4FC1E9;padding: 10px 15px;margin:5px 0;border-radius: 4px;color: #141414;}
+
+.panel-coll {margin-bottom: 5px;cursor: pointer;}
+.panel-coll .panel-body {background: #F5F7FA;}
+
+.coll-table {margin-bottom:0 !important;}
+.coll-table td {vertical-align: middle !important;}
+.coll-table th {font-weight: normal;font-family: 'open_sansbold';text-transform: uppercase;}
+.coll-table th:nth-child(5),.coll-table th:nth-child(6),.coll-table th:nth-child(7),.coll-table th:nth-child(8),.coll-table td:nth-child(5),.coll-table td:nth-child(6),.coll-table td:nth-child(7),.coll-table td:nth-child(8) {text-align: center;}
+.coll-table td .input-group-btn .btn {height: 32px}
+/*.coll-table td:nth-child(even) {background: #fff}
+.coll-table td:nth-child(odd) {background: #efefef;}*/
+
+/*.coll-table th {text-align: center;}
+*/
+.tcol-1 {width:10%;}
+.tcol-2 {width:22%;}
+.tcol-3 {width:22%;}
+.tcol-4 {width:10%;}
+.tcol-5 {width:3%;}
+.tcol-6 {width:3%;text-align: center;}
+.tcol-7 {width:5%;text-align: center;}
+.tcol-8 {width:6%;text-align: center;}
+.tcol-9 {width:14%;}
+.tcol-10 {width:5%;}
+.coll-table td .btn {width: 100%}
+
+
+
 
 /**************  =pluggins ************/
 .datepicker {z-index: 1050 !important}
