--- a/app/views/bookings/sellers_confirmed_bookings.html.erb
+++ b/app/views/bookings/sellers_confirmed_bookings.html.erb
@@ -1,55 +1,101 @@
-<div class="container-fluid" xmlns:form="http://www.w3.org/1999/xhtml">
-  <div class="right-body">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="tabbed-panel home-search-tabs">
-            <ul class="nav nav-tabs panel-tabs">
-              <li class="active"><a href="#tab-p1" data-toggle="tab">Mt Accounts</a></li>
-              <li><a href="#tab-p1" data-toggle="tab">Booking</a></li>
+  <div class="row">
+        <div class="col-xs-12">                  
+            <ul class="nav nav-tabs page-tabs">
+              <li><a href="#tab-b-1" data-toggle="tab">My Accounts</a></li>
+              <li class="active"><a href="#tab-b-2" data-toggle="tab">Bookings</a></li>
             </ul>
             <div class="tab-content">
-              <div class="tab-pane active" id="tab-p1">
-                <table class="table table-striped views-table">
-                  <thead>
-                  <tr style="width: 100%">
-                    <th width="10%">Booking Id</th>
-                    <th width="10%">From</th>
-                    <th width="10%">To</th>
-                    <th width="10%">Date</th>
-                    <th width="10%">Cbm</th>
-                    <th width="10%">Kg</th>
-                    <th width="15%">Action</th>
-                  </tr>
-                  </thead>
-                  <%if @seller_confirmed_bookings.present? %>
-                      <tbody>
-                      <% @seller_confirmed_bookings.each  do |booking| %>
-                          <tr>
-                            <td> <%=booking.id %></td>
-                            <td> <%=booking.source.full_address  %></td>
-                            <td> <%=booking.destination.full_address  %></td>
-                            <td> <%=booking.pick_up_date %></td>
-                            <td> <%=booking.cbm %></td>
-                            <td> <%=booking.weight %></td>
-                            <td>
-                              <%= button_tag ("Reject"), :onclick=> "reject_booking(#{booking.id});" %>
+              <div class="tab-pane" id="tab-b-1"></div>
+              <div class="tab-pane active" id="tab-b-2">
+                <div class="coll-b-header">
+                  <div class="row">
+                    <div class="col-xs-1">#</div>
+                    <div class="col-xs-3">Buyer Name</div>
+                    <div class="col-xs-5 text-center">Total CBM/Weight</div>
+                    <div class="col-xs-3 text-right">Details</div>
+                  </div>
+                </div>
+                <div id="tab-col-parent-1">
+                <%i=0%>
+                <% @seller_confirmed_bookings.each do |user,bookings| %>                
+                <div class="panel panel-coll">
+                  <div class="panel-heading" data-target="#bs-coll-<%=user%>" data-toggle="collapse" data-parent="#tab-col-parent-1">
+                    <div class="row">
+                      <div class="col-xs-1"><%=i+1%></div>                     
+                      <div class="col-xs-3">BUYER</div>                     
+                      <div class="col-xs-5 text-center">WEIGHT</div>
+                      <div class="col-xs-3"><div class="text-right"><i class="fa fa-chevron-down"></i></div></div>
+                    </div>                    
+                  </div>
+                  <div class="panel-body collapse" id="bs-coll-<%=user%>">
+                    <div class="row">
+                      <div class="col-xs-12">
+                        <table class="table coll-table table-striped">
+                          <colgroup>
+                            <col class="tcol-1">
+                            <col class="tcol-2">
+                            <col class="tcol-3">
+                            <col class="tcol-4">
+                            <col class="tcol-5">
+                            <col class="tcol-6">
+                            <col class="tcol-7">
+                            <col class="tcol-8">
+                            <col class="tcol-9">
+                            <col class="tcol-10">
+                          </colgroup>
+                          <thead>
+                            <tr>
+                              <th>Booking ID</th>
+                              <th>From</th>
+                              <th>To</th>
+                              <th>Date</th>
+                              <th>L</th>
+                              <th>B</th>
+                              <th>W</th>
+                              <th>Kg</th>
+                              <th>Invoice No.</th>
+                              <th>&nbsp;</th>
+                            </tr>
+                          </thead>                        
+                          <tbody> 
+                          <%bookings.each do |booking|%>                          
+                            <tr>
+                              <td> <%=booking.id %></td>
+                              <td> <%=booking.source.full_address  %></td>
+                              <td> <%=booking.destination.full_address  %></td>
+                              <td> <%=booking.pick_up_date %></td>
+                              <td> <%=booking.cbm %></td>
+                              <td>B</td>
+                              <td>W</td>
+                              <td> <%=booking.weight %></td>
+                              <td class="invoice_booking_<%=booking.id%>">
+                              <%=booking.invoice_number %> &nbsp;&nbsp;&nbsp;                             
+                              <%= link_to edit_booking_path(booking),{:remote=>true} do %>
+                              <i class="fa fa-pencil"></i>
+                              <% end %>
+
                             </td>
-                          </tr>
-                      <% end %>
-                      </tbody>
-                  <%end%>
-                </table>
+                            <td>
+                              <%= button_tag ("Reject"), :class=>"btn-danger",:onclick=> "reject_booking(#{booking.id});" %>
+                            </td>                              
+                            </tr> 
+                          <%end%>                    
+                          </tbody>
+                          <%i += 1%>                          
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <%end%>
+                </div>                                                                 
               </div>
             </div>
-          </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
 
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -67,7 +113,7 @@
   </div>
 </div>
 
-<script type="text/javascript">
+    <script type="text/javascript">
 
     function reject_booking(id){
         $('#myModal').modal('show');
