--- a/app/views/freights/index.html.erb
+++ b/app/views/freights/index.html.erb
@@ -17,18 +17,17 @@
                     <th class="col-xs-2"># </th>
                     <th class="col-xs-2">From</th>
                     <th class="col-xs-2">To</th>
-                    <th class="col-xs-2">CBM</th>
+                    <th class="col-xs-2">L(Max)</th>
+                    <th class="col-xs-2">W(Max)</th>
+                    <th class="col-xs-2">H(Max)</th>
                     <th class="col-xs-2">Wt.From</th>
                     <th class="col-xs-2">Wt.To</th>
                     <th class="col-xs-4">Date From</th>
                     <th class="col-xs-4">Date To</th>
                     <th class="col-xs-2">Price</th>
 
-
                     <th class="col-xs-4">Freight Type</th>
-                    <th class="col-xs-2">Cut Off Date</th>
                     <th class="col-xs-2">Transition Days</th>
-
 
                     <th class="col-xs-2">Action</th>
                     <th class="col-xs-2">All</th>
@@ -41,14 +40,15 @@
                         <td><%=index+1%></td>
                         <td> <%=freight.source  %></td>
                         <td> <%=freight.destination  %></td>
-                        <td> <%=freight.cbm  %></td>
+                        <td> <%=freight.length  %></td>
+                        <td> <%=freight.width  %></td>
+                        <td> <%=freight.height  %></td>
                         <td> <%=freight.min_weight %></td>
                         <td> <%=freight.max_weight %></td>
                         <td> <%=freight.start_date %></td>
                         <td> <%=freight.end_date %></td>
                         <td> <%=freight.price  %></td>
                         <td> <%=freight.freight_type  %></td>
-                        <td> <%=freight.cut_off_date  %></td>
                         <td> <%=freight.transition_days  %></td>
 
                       </tr>
