--- a/app/views/bookings/booking_summary.html.erb
+++ b/app/views/bookings/booking_summary.html.erb
@@ -19,8 +19,8 @@
     <% freight = Freight.find(value) %>
     <% booking = Booking.find(key)%>  
     <tr>
-      <td><%= freight.source%></td>
-      <td><%= freight.destination%></td>    
+      <td><%= freight.source.full_address%></td>
+      <td><%= freight.destination.full_address%></td>    
       <td><%= booking.length%></td>
       <td><%= booking.width%></td>
       <td><%= booking.height%></td>
