--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -44,7 +44,7 @@ body {padding-top: 50px;font-size: 14px;margin-bottom: 180px;font-family: 'open_
 
 .container {width: 1170px !important;}
 .right-body {padding-top: 20px;}
-.page-overlay {background: #000;position: fixed;left: 0;top: 0;width: 100%;height: 100%;z-index: 1100;display: none;opacity: 0.5;filter(alpha=50);-ms-filter(alpha=50);transition:all 1s ease-in-out;-webkit-transition:all 1s ease-in-out;-moz-transition:all 1s ease-in-out;Z}
+.page-overlay {background: #000;position: fixed;left: 0;top: 0;width: 100%;height: 100%;z-index: 1100;display: none;opacity: 0.5;-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";transition:all 1s ease-in-out;-webkit-transition:all 1s ease-in-out;-moz-transition:all 1s ease-in-out;}
 .btn-ghost {border:1px solid;background: transparent;}
 .btn-ghost:hover {background: #fff;background: rgba(255,255,255,0.7);}
 .ghost-white {color: #fff;}
