--- a/app/views/bookings/get_quote.html.erb
+++ b/app/views/bookings/get_quote.html.erb
@@ -106,103 +106,12 @@
         </div>
       </div>
   </div>
-
+  
   <div class="result-content">
-    <div class="row">
-      <div class="col-xs-9 col-xs-offset-1">
-        <div class="row">
-          <div class="col-xs-12">
-            <div class="rlist-wrapper">
-              <ul class="rlist-headings">
-                <li>&nbsp;</li>
-                <li>Ratings</li>
-                <li>Cut Offs</li>
-                <li>Delivery</li>
-                <li>Days</li>
-                <li>All - in Price</li>
-                <li>&nbsp;</li>
-              </ul>
-
-              <% @freight_rates.each do |freight_rate|%>
-                <div class="result-item">
-                  <div class="rb-item rb-name closed-review" data-toggle="collapse" data-target="#ri-<%=freight_rate.id%>" seller_id="<%=freight_rate.seller_id%>" freight_id="<%=freight_rate.id%>"><%= image_tag(freight_rate.seller.avatar_url, height: 100, width: 100) if freight_rate.seller && freight_rate.seller.avatar? %></div>
-                  <div class="rb-item rb-rating closed-review" data-toggle="collapse" data-target="#ri-<%=freight_rate.id%>" seller_id="<%=freight_rate.seller_id%>" freight_id="<%=freight_rate.id%>">
-                    <span class="rview-rating" rate_count="<%= @ratings[freight_rate.seller_id] || 0%>"></span> <span class="rview-rating-c">(<%= @ratings[freight_rate.seller_id] || 0%>)</span>
-                  </div>              
-                  <div class="rb-item rb-coff"><%= @draft_booking.pick_up_date.strftime("%-d, %b")%></div>
-                  <div class="rb-item rb-del"><%= delivery_date(@draft_booking, freight_rate).strftime("%-d, %b")%></div>
-                  <div class="rb-item rb-day"><%= freight_rate.transition_days%></div>
-                  <div class="rb-item rb-aip">US $<%= freight_rate.price %></div>
-                  <div class="rb-item rb-buk">
-                    <button style="display: <%= is_in_cart?(@draft_booking, freight_rate) ? 'block' : 'none' %>" class="btn selected" id = "selected_freight_<%=  freight_rate.id%>" freight_id = "<%= freight_rate.id %>" booking_id="<%= @draft_booking.id%>" type="button" onclick="remove_from_cart(<%= @draft_booking.id%>, <%= freight_rate.id%>);">Selected</button>
-
-                    <button style="display: <%= !is_in_cart?(@draft_booking, freight_rate) ? 'block' : 'none' %>" class="btn btn-success select" id = "freight_<%=  freight_rate.id%>" freight_id = "<%= freight_rate.id %>" booking_id="<%= @draft_booking.id%>" type="button" onclick="add_to_cart(<%= @draft_booking.id%>, <%= freight_rate.id%>);">Select</button>
-                  </div>
-                </div>
-
-                <div class="r-collapsed-info collapse" id="ri-<%=freight_rate.id%>"></div>
-              <%end%>
-            </div>  
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-8 col-xs-offset-2">
-            <div class="form-group text-center">
-              <%= link_to 'Book Now', 'javascript:void()', onclick: "check_cart('/address_books/add_supplier_consignee')", class: "btn btn-primary"%>
-              <%= link_to 'javascript:void()', class: "btn btn-default pull-right", onclick: "check_cart('/bookings/booking_summary')" do %>
-                View Summary
-                <i class="fa fa-angle-double-right"></i>  
-              <% end %>
-            </div>
-          </div>
-        </div>  
-      </div>  
-      <div class="col-xs-2">
-        <div class="slctd-sr-list cart_detail">
-          <%= render :partial => 'bookings/cart_details'%> 
-        </div>           
-      
-        <div class="ssdd-btn btn-group">
-         <a href="#" class="btn btn-default dropdown" data-toggle="dropdown">
-           Selected Shippers <span class="caret"></span>
-         </a>
-         <ul class="dropdown-menu ss-dd-list" role="menu">
-           <li class="dd-li">
-               <label for="checkbox_1">One</label>
-               <input type="checkbox" id="checkbox_1" name="checkbox_1" value="Checkbox One" />
-           </li>
-           <li class="dd-li">
-               <label for="checkbox_2">Two</label>
-               <input type="checkbox" id="checkbox_2" name="checkbox_2" value="Checkbox One" />
-           </li>
-           <li class="dd-li">
-               <label for="checkbox_3">Three</label>
-               <input type="checkbox" id="checkbox_3" name="checkbox_3" value="Checkbox One" />
-           </li>
-           <li class="dd-li">
-               <label for="checkbox_4">Four</label>
-               <input type="checkbox" id="checkbox_4" name="checkbox_4" value="Checkbox One" />
-           </li>
-           <li class="dd-li">
-               <label for="checkbox_5">One</label>
-               <input type="checkbox" id="checkbox_5" name="checkbox_5" value="Checkbox One" />
-           </li>
-           <li class="dd-li">
-               <label for="checkbox_6">Two</label>
-               <input type="checkbox" id="checkbox_6" name="checkbox_6" value="Checkbox One" />
-           </li>
-           <li class="dd-li">
-               <label for="checkbox_7">Three</label>
-               <input type="checkbox" id="checkbox_7" name="checkbox_7" value="Checkbox One" />
-           </li>
-           <li class="dd-li">
-               <label for="checkbox_8">Four</label>
-               <input type="checkbox" id="checkbox_8" name="checkbox_8" value="Checkbox One" />
-           </li>                     
-         </ul>
-        </div>
-
-      </div>
-    </div>
-  </div>
+    <% if @freight_rates.any? %>
+      <%= render 'result_content'%>
+    <% else %>
+      <%= render 'no_freights' %>
+    <%end%>  
+  </div>  
 </div>
