--- a/app/views/bookings/sellers_confirmed_bookings.html.erb
+++ b/app/views/bookings/sellers_confirmed_bookings.html.erb
@@ -27,8 +27,8 @@
                       <% @seller_confirmed_bookings.each  do |booking| %>
                           <tr>
                             <td> <%=booking.id %></td>
-                            <td> <%=booking.source  %></td>
-                            <td> <%=booking.destination  %></td>
+                            <td> <%=booking.source.full_address  %></td>
+                            <td> <%=booking.destination.full_address  %></td>
                             <td> <%=booking.pick_up_date %></td>
                             <td> <%=booking.cbm %></td>
                             <td> <%=booking.weight %></td>
